--- a/index.html
+++ b/index.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Weather Is Coming</title>
-    </head>
-    <body>
-        <script defer src="index.js"></script>
-        <header>
-          <h1>Weather Is Coming!</h1>
-        </header>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <title>Weather Is Coming</title>
+  </head>
+  <body>
+    <script defer src="index.js"></script>
+    <header>
+      <h1 id="header">Weather Is Coming!</h1>
+    </header>
+    
+    <div id="grid container">
+    <!-- 3-day Forecast Section - left of page -->
+    <section id="left">
+      <div>
+        <h3>3-day Forecast Section:</h3>
+        <div id="threedayforecast"></div>
+      </div>
+    </section>
 
-        <!-- 3-day Forecast Section - left of page -->
-        <div>
-          <h3>3-day Forecast Section:</h3>
-          <div id="threedayforecast"></div>
-        </div>
+    <!-- Today's Forecast Section - center of page -->
+    <section id="center">
+      <div id="current-city">
+        <h2>New York, New York</h2>
+        <div id="forecast">Forecast Section:</div>
+      </div>
 
-        <!-- Today's Forecast Section - center of page -->
-        <div id="current-city">
-          <h2>New York, New York</h2>
-          <div id="forecast">Forecast Section:</div>
-        </div>
+      <!-- Cycle cat pictures - below Today's Forecast Section -->
+      <div id="cat-pictures">
+        <h3>Today's Cat Mood:</h3>
+      </div>
+    </section>
+          
+    <section id="right">
+      <!-- New City Form Input - top right of page -->
+      <form id="new-city">
+        <h4>Search New City:</h4>
+        <label>City: </label>
+        <input type="text" id="search-city"/>
+        <input type="submit" value="Search"/>
+        <!-- Add submit button -->
+      </form>
 
-        <!-- Cycle cat pictures - below Today's Forecast Section -->
-        <div id="cat-pictures">
-          <h3>Today's Cat Mood:</h3>
-        </div>
+      <!-- List of searched cities - mid-right of page -->
+      <div id="city-search">
+        Past Searched Cities:
+      </div>
 
-        <!-- New City Form Input - top right of page -->
-        <form id="new-city">
-          <h4>Search New City:</h4>
-          <label>City: </label>
-          <input type="text" id="search-city"/>
-          <input type="submit" value="Search"/>
-          <!-- Add submit button -->
-        </form>
-
-        <!-- List of searched cities - mid-right of page -->
-        <div id="city-search">
-          Past Searched Cities:
-        </div>
-
-        <!-- Comments Section - bottom right of page -->
-        <h3>COMMENTS:</h3>
-        <ul>Unordered List - Comments
-          <li>Comment 1</li>
-          <li>Comment 2</li>
-          <li>Comment 3</li>
-        </ul>
-        <form id="city-comment">
-          <h3>Add Comment:</h3>
-          <h4>Name:</h4>
-          <input type="text" id="new-name"/>
-          <h4>New Comment:</h4>
-          <textarea name="new-comment" id="new-comment"></textarea>
-          <input type="submit" value="Add Comment"/>
-        </form>
-    </body>
+      <!-- Comments Section - bottom right of page -->
+      <h3>COMMENTS:</h3>
+      <ul>Unordered List - Comments
+        <li>Comment 1</li>
+        <li>Comment 2</li>
+        <li>Comment 3</li>
+      </ul>
+      <form id="city-comment">
+        <h3>Add Comment:</h3>
+        <h4>Name:</h4>
+        <input type="text" id="new-name"/>
+        <h4>New Comment:</h4>
+        <textarea name="new-comment" id="new-comment"></textarea>
+        <input type="submit" value="Add Comment"/>
+      </form>
+    </section>
+  </div>
+  </body>
 </html>
