cats pics now working

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <div id="cat-pictures">
             <h3>Today's Cat Mood:</h3>
             <h4>Double Click To See More Cats!</h4>
+            <img id="cat-image" src="">
           </div>
   </section>
   <section id="right">
