functioning add city form

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
           <!-- List of searched cities - mid-right of page -->
           <p>Past Searched Cities:</p>
-          <div id="city-search">
-            <ul>Example City</ul>
+          <div>
+            <ul id="city-search">
+            </ul>
           </div>
 
           <!-- Comments Section - bottom right of page -->
