--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <script defer src="index.js"></script>
         <header>
           <h1 id="header" >Weather Is Coming!</h1>
-          <div id="current-city">
-            <h1>New York, New York</h1>
+          <div>
+            <h1 id="current-city">New York, New York</h1>
           </div>
         </header>
 <div id="grid-container" >
@@ -53,10 +53,7 @@
 
           <!-- Comments Section - bottom right of page -->
           <h3>COMMENTS:</h3>
-          <ul>Unordered List - Comments
-            <li>Comment 1</li>
-            <li>Comment 2</li>
-            <li>Comment 3</li>
+          <ul id="new-comment-container">
           </ul>
           <form id="city-comment">
             <h3>Add Comment:</h3>
