--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
           <h1 id="header" >Weather Is Coming!</h1>
           <div>
-            <h1 id="current-city">New York, New York</h1>
+            <h1 id="current-city">New York</h1>
           </div>
         </header>
 <div id="grid-container" >
@@ -47,13 +47,13 @@
           <!-- List of searched cities - mid-right of page -->
           <p>Past Searched Cities:</p>
           <div>
-            <ul id="city-search">
+            <ul id="city-search" class="container">
             </ul>
           </div>
 
           <!-- Comments Section - bottom right of page -->
           <h3>COMMENTS:</h3>
-          <ul id="new-comment-container">
+          <ul id="new-comment-container" class="container">
           </ul>
           <form id="city-comment">
             <h3>Add Comment:</h3>
